--- a/requirements.txt
+++ b/requirements.txt
@@ -44,17 +44,17 @@ diff-match-patch==20121119
     # via -r requirements.in
 django-ipware==1.1.6
     # via -r requirements.in
-django-jinja==2.7.0
+django-jinja
     # via -r requirements.in
 django-pglocks==1.0.2
     # via -r requirements.in
 django-picklefield==0.3.2
     # via -r requirements.in
-django-sampledatahelper==0.4.1
+django-sampledatahelper
     # via -r requirements.in
-django-sites==0.10
+django-sites
     # via -r requirements.in
-django-sr==0.0.4
+django-sr
     # via -r requirements.in
 django==2.2.19
     # via
@@ -64,6 +64,8 @@ django==2.2.19
     #   django-sites
     #   django-sr
     #   easy-thumbnails
+django-storages
+boto3==1.27.0
 djmail==1.0.1
     # via -r requirements.in
 docopt==0.6.2
@@ -76,7 +78,7 @@ gunicorn==19.9.0
     # via -r requirements.in
 html5lib==1.1
     # via -r requirements.in
-idna==2.8
+idna
     # via requests
 importlib-metadata==3.10.0
     # via
@@ -144,7 +146,7 @@ requests-oauthlib==1.3.0
     # via
     #   -r requirements.in
     #   asana
-requests==2.21.0
+requests
     # via
     #   -r requirements.in
     #   asana
@@ -176,7 +178,7 @@ typing-extensions==3.7.4.3
     # via importlib-metadata
 unidecode==0.4.20
     # via -r requirements.in
-urllib3==1.24.3
+urllib3
     # via requests
 vine==1.3.0
     # via
